# market-data-delta-pipeline

./: .gitignore  README.md  market_pipeline.py  morningstar_etf_pipeline.py  pyproject.toml  requirements.txt  security_reference_pipeline.py  sqlite_market_pipeline.py  test_security_reference_pipeline.py
.github/workflows/: daily_extraction.yml
docs/: ETF guide 2026.md
spec/: spec_requirements.md
