[tool.poetry]
name = "financepipe"
version = "0.1.0"
description = "Daily Yahoo Finance to Delta Lake ingestion pipeline"
authors = ["FinancePipe Team <team@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
dlt = {extras = ["deltalake"], version = "*"}
deltalake = ">=1.6.1"
yfinance = "*"
pandas = "*"
python-dotenv = "*"
yahooquery = "^2.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]
